# CkWriter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deploy.sh  plan.md
docs/: memory-architecture.md
docs/tickets/: TEMPLATE.md
docs/tickets/backlog/: 0007-FEA-paragraph-focused-coaching.md  0008-FEA-three-layer-memory.md  0009-FEA-skill-and-tool-framework.md  0010-FEA-scene-transcoder-skill.md  0011-FEA-always-loaded-context.md  0012-FEA-vector-retrieval.md  0013-FEA-continuity-check-skill.md  0014-BUG-manuscript-click-drag-collision.md  0015-BUG-latex-command-highlighting.md  0016-BUG-editor-multi-click-selection.md  0017-BUG-editor-flicker-on-type.md  0019-BUG-chapter-form-not-editable.md  0020-BUG-dyslexia-friendly-reading.md  0021-BUG-coach-anchor-drift-bottom-of-doc.md  0022-REF-prose-editor-crate.md  0022-REF-ropey-per-paragraph-render.md  0027-FEA-mark-flag-as-duplicate.md  0028-FEA-super-i-emph-wrap.md  (+4 more)
src/: app.rs  diff.rs  extract.rs  icons.rs  import.rs  index.rs  logging.rs  main.rs  pdf.rs  scope.rs  settings.rs  subprocess.rs  theme.rs
src/app/: book.rs  chat.rs  coach.rs  entity.rs  extract.rs  mod.rs  pdf.rs  progression.rs
src/book/: chapter_meta.rs  chapters.rs  data.rs  dismissals.rs  entity.rs  latex.rs  manuscript.rs  mod.rs  paragraphs.rs  suggestions.rs  tree.rs
src/llm/: characters.rs  conversation.rs  mod.rs  parse.rs  progression.rs  prompts.rs  revision.rs
src/ui/: chapter_list.rs  diff_view.rs  editor.rs  file_tree.rs  forms.rs  inspector.rs  mod.rs  pdf_view.rs  scope_panel.rs  settings_dialog.rs  top_bar.rs
(+37 files in other folders)
